[package]
name = "turtle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11 = { version = "*", features = ["xlib"] }
libc = "*"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
moveslice = "2.0"